ActionScheduler removed and added eventBus tracking of timed events

--- a/src/main/python/templates/main.html
+++ b/src/main/python/templates/main.html
@@ -81,17 +81,17 @@
           <table>
             <tr>
               <td>&nbsp;</td>
-              <td><button type="button" id="btnUp" class="ctrlButton" value="UP">Up</button></td>
+              <td><button type="button" id="btnUp" class="ctrlButton" value="U">Up</button></td>
               <td>&nbsp;</td>
             </tr>
             <tr>
-              <td><button type="button" id="btnLeft"  class="ctrlButton" value="LEFT">Left</button></td>
-              <td><button type="button" id="btnStop"  class="ctrlButton" value="STOP">Stop</button></td>
-              <td><button type="button" id="btnRight" class="ctrlButton" value="RIGHT">Right</button></td>
+              <td><button type="button" id="btnLeft"  class="ctrlButton" value="L">Left</button></td>
+              <td><button type="button" id="btnStop"  class="ctrlButton" value="S">Stop</button></td>
+              <td><button type="button" id="btnRight" class="ctrlButton" value="R">Right</button></td>
             </tr>
             <tr>
               <td>&nbsp;</td>
-              <td><button type="button" id="btnDown"  class="ctrlButton" value="DOWN">Down</button></td>
+              <td><button type="button" id="btnDown"  class="ctrlButton" value="D">Down</button></td>
               <td>&nbsp;</td>
             </tr>
           </table>
